Fixed chat alignment and particle stuff

--- a/css/main.css
+++ b/css/main.css
@@ -153,7 +153,7 @@ img {
 	width  : 425px;
 	float  : right;
 	position : absolute;
-	bottom: 50px;
+	bottom: 30px;
 	right: 50px;
 	background-image: url(../images/chat_background.svg);
 	background-repeat: no-repeat;
